[package]
name    = "mssh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow       = "1.0.98"
clap         = { version = "4.5.39", features = ["derive"] }
env_logger   = "0.11.8"
log          = "0.4.27"
russh        = "0.52.1"
shell-escape = "0.1.5"
tokio        = { version = "1.45.1", features = ["full"] }
